<resources>
    <string name="app_name">ShopNStock</string>
    <!-- Errors messages -->
    <string name="error_user_not_found">User not found!</string>
    <string name="error_invalid_email">Invalid email. Try again!</string>
    <string name="error_wrong_password">Wrong password. Try again!</string>
    <string name="error_email_already_in_use">Email already in use. Try again!</string>
    <string name="error_weak_password">Weak password (Min length: 6). Try again!</string>
    <string name="error_scanning_list">Error scanning QR-code. Try again!</string>
    <string name="error_budget_limit_reached">You reached budget limit!</string>
    <string name="error_changing_budget">Error changing budget. Try again!</string>

    <!-- Successful messages -->
    <string name="successful_add_item">Item successfully added to your list!</string>
    <string name="successful_create_list">List successfully created!</string>
    <string name="successful_copy_to_clipboard_list">List successfully copied to clipboard!</string>
    <string name="successful_update_password">Password successfully updated!</string>
    <string name="successful_delete_purchased_items">Purchased items successfully deleted!</string>
    <string name="successful_uncheck_all_items">All items successfully unchecked!</string>

    <string name="title_activity_shopping_list" translatable="false">ShoppingListActivity</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="list_menu_rename_list">Rename list</string>
    <string name="list_menu_copy_list">Copy list</string>
    <string name="list_menu_share_list">Share list</string>
    <string name="list_menu_delete_list">Delete list</string>
    <string name="share_qr_code_popup_header">Share QR code</string>
    <string name="rename_list">Rename</string>
    <string name="rename_list_enter_new_name">Enter new name</string>
    <string name="rename_list_current_list_name">Current list name</string>
    <string name="rename_list_new_list_name">New list name</string>
    <string name="cancel">Cancel</string>
    <string name="list_add_new_item">Add new item</string>
    <string name="create_new_list">Add new list</string>
    <string name="create_new_list_create_button">Create</string>
    <string name="create_new_list_hint">List name</string>
    <string name="list_copy_whole_list">Whole list</string>
    <string name="list_copy_unpurchased_items_list">Unpurchased items</string>
    <string name="list_copy_purchased_items_list">Purchased items</string>
    <string name="scan_qr_code_on_another_device">Scan QR-code on another device</string>
    <string name="create_list_scan_qr_code">Scan QR-code</string>
    <string name="or_line">───────── or ─────────</string>
    <string name="scan_qrcode_to_add_new_list">Scan QR-code to add new list</string>
    <string name="user_menu_list_option">Lists</string>
    <string name="user_menu_settings_option">Settings</string>
    <string name="user_menu_notifications_option">Notifications</string>
    <string name="user_menu_log_out_option">Log out</string>

    <string name="settings_header">Settings</string>
    <string name="settings_user_section">User settings</string>
    <string name="settings_notifications_section">Notifications settings</string>
    <string name="settings_app_section">App settings</string>
    <string name="settings_lists_section">Lists settings</string>

    <string name="change_username_header">Change username</string>
    <string name="change_username_current">Current username</string>
    <string name="change_username_new">New username</string>
    <string name="change_username_enter_new">Enter new username</string>
    <string name="change">Change</string>

    <string name="change_password_header">Change password</string>
    <string name="change_password_current">Current password</string>
    <string name="change_password_enter_current">Enter current password</string>
    <string name="change_password_new">New password</string>
    <string name="change_password_enter_new">Enter new password</string>
    <string name="add_new_item_price_header">Price (per unit)</string>
    <string name="add_new_item_name_header">Item name</string>
    <string name="add_new_item_quantity_header">Quantity</string>
    <string name="add_new_item_unit_header">Unit</string>
    <string name="add_new_item_exp_date_header">Expiration date</string>
    <string name="add">Add</string>
    <string name="add_new_item_header">Add new item</string>
    <string name="create_new_list_budget_hint">Budget (max)</string>
    <string name="list_menu_edit_budget">Edit budget</string>
    <string name="change_budget_header">Change list budget</string>
    <string name="change_budget_new">New budget</string>
    <string name="change_language_header">Change language</string>

    <string name="change_username_title">Change username</string>
    <string name="change_password_title">Change password</string>
    <string name="push_notifications_title">Enable push notifications</string>
    <string name="dark_theme_title">Dark theme</string>
    <string name="change_language_title">Change language</string>
    <string name="log_in">Log in</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="log_in_button">Log in</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="new_here_create_account">New here? Create account</string>
    <string name="shop_smart_stay_fresh">Shop Smart, Stay Fresh!</string>
    <string name="sign_up_button">Sign up</string>
    <string name="create_account">Create account</string>
    <string name="username">Username</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="already_have_account_log_in">Already have account? Log in</string>
    <string name="list_menu_delete_purchased">Delete purchased</string>
    <string name="list_menu_uncheck_all">Uncheck all items</string>

</resources>