<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/default_popup_background"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/rename_list_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/rename_list_header"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/change_password_header"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/font"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_pencil"
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/change_password_first_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password_current"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/change_password_current_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_input_dark"
            android:gravity="center_vertical"
            android:hint="@string/change_password_enter_current"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:textColor="@color/black"
            android:textColorHint="#A8A8A8"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/change_password_next_step_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/change_password_second_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password_new"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/change_password_new_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_input_dark"
            android:gravity="center_vertical"
            android:hint="@string/change_password_enter_new"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:textColor="@color/black"
            android:textColorHint="#A8A8A8"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/change_password_change_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/change"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/change_password_cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button_transparent"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/cancel"
        android:textColor="@color/app_base"
        android:textSize="30sp"
        android:textStyle="bold" />


</LinearLayout>