<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="230dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="60dp"
    android:layout_marginEnd="10dp"
    android:layout_gravity="end"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/default_popup_background"
    >

    <LinearLayout
        android:id="@+id/list_menu_rename_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_pencil"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/list_menu_rename_list"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/list_menu_change_budget_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_money_round"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/list_menu_edit_budget"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/list_menu_copy_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_copy"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/list_menu_copy_list"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/list_menu_share_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_share"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/list_menu_share_list"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/list_menu_delete_purchased_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_trash_remove"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/list_menu_delete_purchased"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/list_menu_uncheck_all_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_arrow_back"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/list_menu_uncheck_all"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/list_menu_delete_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_trash"
            app:tint="@color/red"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/list_menu_delete_list"
            android:textColor="#FF5252"
            android:textSize="20sp"
            />

    </LinearLayout>


</LinearLayout>