<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/default_popup_background"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/copy_list_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/share_qr_code_popup_header"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/font"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_qrcode"
            />


    </LinearLayout>

    <ImageView
        android:id="@+id/share_qr_code_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/scan_qr_code_on_another_device"
        android:textSize="20sp"
        android:textColor="@color/item_header"
        />

    <TextView
        android:id="@+id/share_qr_code_cancel_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/app_base"
        android:background="@drawable/custom_button_transparent"
        />


</LinearLayout>