<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/default_popup_background"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/change_budget_header"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/font"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_pencil"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/change_budget_new"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/change_budget_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_input_dark"
            android:hint="-"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textColorHint="#A8A8A8"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:inputType="numberDecimal"
            android:drawableStart="@drawable/custom_money_icon"
            android:drawablePadding="15dp"
            android:drawableTint="@color/input_dark_stroke"
            />

        <TextView
            android:id="@+id/change_budget_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/change"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:background="@drawable/custom_button"
            />

        <TextView
            android:id="@+id/change_budget_cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/app_base"
            android:background="@drawable/custom_button_transparent"
            />

    </LinearLayout>


</LinearLayout>