<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="60dp"
    android:layout_marginEnd="10dp"
    android:layout_gravity="end"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/default_popup_background"
    >

    <LinearLayout
        android:id="@+id/user_menu_settings_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_gear"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/user_menu_settings_option"
            android:textStyle="bold"
            android:textColor="@color/input_hint"
            android:textSize="20sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_menu_notifications_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_bell"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/user_menu_notifications_option"
            android:textStyle="bold"
            android:textColor="@color/input_hint"
            android:textSize="20sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_menu_lists_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_whole_list"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/user_menu_list_option"
            android:textStyle="bold"
            android:textColor="@color/input_hint"
            android:textSize="20sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_menu_logout_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_logout"
            app:tint="@color/dark_red"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/user_menu_log_out_option"
            android:textStyle="bold"
            android:textColor="@color/dark_red"
            android:textSize="20sp"
            />

    </LinearLayout>


</LinearLayout>